--- a/1-Relembrando_Conceitos_HTML/index.html
+++ b/1-Relembrando_Conceitos_HTML/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <header>
-    <img src="/homem-perfil.jpg" alt="Exemplo de imagem de perfil">
+    <img src="/1-Relembrando_Conceitos_HTML/homem-perfil.jpg" alt="Exemplo de imagem de perfil">
     <h1>
       O título do
       <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/header" target="_blank">header</a>
@@ -32,7 +32,7 @@
           aqui
         </h3>
       </header>
-      <img src="/arara.webp" alt="Exemplo de imagem de postagem">
+      <img src="/1-Relembrando_Conceitos_HTML/arara.webp" alt="Exemplo de imagem de postagem">
       <p>
         Crie um texto
         <a href="https://www.lipsum.com/" target="_blank">Lorem ipsum</a> no
