--- a/Projetos/2-Projeto_Página_do_Instagram/index.html
+++ b/Projetos/2-Projeto_Página_do_Instagram/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/Projetos/2-Projeto_Página_do_Instagram/img/logo.png">
     <title>Instagram</title>
 </head>
+
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
@@ -17,25 +20,29 @@
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+                <a href="https://github.com/ViniBavaresco" target="_blank" class="instagram-login">Continue como
+                    ViniciusBavaresco</a>
+                <a href="https://github.com/ViniBavaresco" target="_blank" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
+                <p class="not-account">Não é viniciusb?</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
+                    <a class="link-blue" href="trocar-conta.html">Trocar de conta</a>
                     ou
-                    <span class="link-blue">Inscreva-se</span>
+                    <a class="link-blue" href="cadastrar.html">Cadastre-se</a>
                 </p>
             </div>
             <div class="get-the-app">
                 <p class="get-app">Baixe o aplicativo</p>
                 <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                    <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo" target="_blank"
+                        class="app-download"></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3D2CBC824F-CB74-43D9-B53B-8D079F95C6DB%26utm_content%3Dlo%26utm_medium%3Dbadge"
+                        target="_blank" class="app-download"></a>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
