Atualização da página de cadastro e index

--- a/Projetos/2-Projeto_Página_do_Instagram/cadastrar.html
+++ b/Projetos/2-Projeto_Página_do_Instagram/cadastrar.html
@@ -65,7 +65,7 @@
                 </a>
             </div>
 
-            <div class="group">
+            <div class="group2">
                 <p class="not-account">Tem uma conta? <a class="link-blue" href="index.html">Conecte-se</a></p>
             </div>
 
