--- a/Projetos/2-Projeto_Página_do_Instagram/index.html
+++ b/Projetos/2-Projeto_Página_do_Instagram/index.html
@@ -25,7 +25,7 @@
                 <a href="https://github.com/ViniBavaresco" target="_blank" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é viniciusb?</p>
+                <p class="not-account">Não é ViniciusBavaresco?</p>
                 <p class="not-account">
                     <a class="link-blue" href="trocar-conta.html">Trocar de conta</a>
                     ou
