--- a/1-Relembrando_Conceitos_HTML/index.html
+++ b/1-Relembrando_Conceitos_HTML/index.html
@@ -21,7 +21,8 @@
     <header>
       <h2>
         Postagens - Título da
-        <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/section" target="_blank">section</a>
+        <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/section" target="_blank">section</a>. Clique
+        nos links para mais informações!
       </h2>
     </header>
     <article>
